@@ -7,6 +7,8 @@ Changes in version 0.14.1 (??? 2011)
 BUG FIXES
 - #3317632: CloneableWithoutClone - false positive.
 - #3315990: StaticXxxField false positive on initializer: StaticSimpleDateFormatField, StaticDateFormatField, StaticCalendarField.
+- #3314773: UnnecessaryGroovyImportRule: false positive on static imports
+
 
 Changes in version 0.14 (June 2011)
 -------------------------------------------
